trying to add qmmm

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "642a23f6",
    "metadata": {},
    "outputs": [
@@ -95,11 +95,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: xtp_tools: command not found\r\n"
+      "/bin/bash: xtp_map: command not found\r\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "!xtp_map -v -t system.data -c traj1.dump -s mapping.xml -f state.hdf5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e56653a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!xtp_run -e mapchecker -o mapchecker.xml -f state.hdf5"
+   ]
   }
  ],
  "metadata": {
