--- a/spectroscopyWithVotcaAndLammps.ipynb
+++ b/spectroscopyWithVotcaAndLammps.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Electronic Spectroscopy with VOTCA and LAMMPS\n",
     "\n",
-    "In this tutorial we will determine the solvatochromic shifts in the spectrum of acetone in water using LAMMPS and VOTCA-XTP."
+    "In this tutorial we will determine the solvatochromic shift in the spectrum of acetone in water using LAMMPS and VOTCA."
    ]
   },
   {
